# holon

./: .gitignore  CHANGES_2026-01-29.md  CHANGES_2026-01-29_PART2.md  HOLON_NEXT_STEPS.md  README.md  WORKFLOW_EXECUTION_UI.md  holon_blueprint.md  package-lock.json  package.json
core/: README.md  pyproject.toml
core/examples/: demo.holon.py  demo_langchain.holon.py  demo_rename_node.py  multi_agent.holon.py  run_demo.py  run_multi_agent.py  run_spec_demo.py  simple_exec.holon.py  simple_llm.holon.py  simple_workflow.py  spec_nodes.holon.py
core/holon/: REGISTRY_README.md  RUNNER_README.md  __init__.py  __version__.py  cli.py  devserver.py  dsl.py  registry.py  runner.py
core/holon/domain/: __init__.py  models.py
core/holon/execution/: __init__.py  engine.py  ports.py  resolver.py
core/holon/rpc/: __init__.py  server.py
core/holon/services/: __init__.py  graph_parser.py  parser.py  patcher.py
core/tests/: test_graph_parser.py  test_parser.py  test_patcher.py  test_registry.py  test_runner.py
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts  rpcClient.ts  webview.ts
scripts/: dev.mjs
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  ConfigPanel.tsx  CredentialsModal.tsx  browserBridge.ts  logic.js  logic.ts  main.tsx  ports.js  ports.ts  protocol.js  protocol.ts  styles.css  vscodeBridge.ts
