[tool.poetry]
name = "holon-core"
version = "0.1.0"
description = "Holon core parser and services (Phase 1)."
authors = ["Etienne <unknown@example.com>"]
readme = "README.md"
packages = [{ include = "holon" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
libcst = "^1.1.0"
pydantic = "^2.6.0"
langchain = "^1.2.7"
langchain-openai = "^1.1.7"
langchain-community = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.10.0"
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "I", "UP", "B", "SIM",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
